@@ -1,3 +1,8 @@
+2012-05-28: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+
+	* Bundles/Sndio/Sndio.[h|m]
+	cleanup a bit
+
 2012-05-28 Riccardo Mottola <rm@gnu.org>
 
 	* PreferencesController.m
